[package]
name = "gateway"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.2.1"
http = "0.2"
http-body = "0.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = "*"
hyper = "0.14.11"

hex = "0.4.2"
flate2 = "1.0.20"

error-chain = "0.12.0"
rust-crypto = "0.2.36"

sqlx = { version = "0.5", features = [ "mysql", "runtime-async-std-native-tls" ] }
async-std = { version = "1.6", features = [ "attributes" ] }
mysql = "*"

[lib]
name = "gateway"
path = "src/lib.rs"

[[bin]]
name = "gateway_bin"
path = "src/bin/gateway.rs"

[[bin]]
name = "test"
path = "src/bin/test.rs"
